--- a/Music/src/music/EditTrackView.fxml
+++ b/Music/src/music/EditTrackView.fxml
@@ -1,218 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import fi.jyu.mit.fxgui.ComboBoxChooser?>
-<?import fi.jyu.mit.fxgui.ListChooser?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="music.EditTrackController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="Menu">
-               <items>
-              <MenuItem mnemonicParsing="false" text="Print" />
-                  <MenuItem mnemonicParsing="false" text="Exit" />
-               </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-                  <MenuItem mnemonicParsing="false" text="New set" />
-                  <MenuItem mnemonicParsing="false" text="Rename set" />
-                  <MenuItem mnemonicParsing="false" text="Delete set" />
-            </items>
-          </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Help" />
-               </items>
-            </Menu>
-        </menus>
-      </MenuBar>
-   </top>
-   <center>
-      <SplitPane dividerPositions="0.2593889242520688, 0.5" BorderPane.alignment="CENTER">
-         <items>
-            <BorderPane minWidth="150.0">
-               <center>
-                  <ListChooser prefWidth="170.0" rivit="Alex Pervukhin - This for B&#10;Kozac - Hoodlove&#10;Silat Beksi - On my own&#10;Pîrvu - Do this&#10;Pîrvu - Keep me busy&#10;" BorderPane.alignment="CENTER" />
-               </center>
-               <top>
-                  <VBox alignment="CENTER" maxWidth="300.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Label text="All tracks">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                        <ComboBoxChooser minWidth="160.0" rivit="Track&#10;Artist&#10;Format&#10;Bpm&#10;Style">
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                        </ComboBoxChooser>
-                        <TextField />
-                     </children>
-                  </VBox>
-               </top>
-            </BorderPane>
-            <BorderPane>
-               <center>
-                  <ScrollPane fitToWidth="true" BorderPane.alignment="CENTER">
-                     <content>
-                        <GridPane hgap="10.0">
-                          <columnConstraints>
-                            <ColumnConstraints halignment="RIGHT" hgrow="NEVER" prefWidth="70.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label text="Artist" />
-                              <TextField text="Alex Pervukhin" GridPane.columnIndex="1" />
-                              <Label text="Name" GridPane.rowIndex="1" />
-                              <Label text="Format" GridPane.rowIndex="2" />
-                              <Label text="Label" GridPane.rowIndex="3" />
-                              <Label text="Label" GridPane.rowIndex="3" />
-                              <Label text="Bpm" GridPane.rowIndex="4" />
-                              <Label text="Length" GridPane.rowIndex="5" />
-                              <Label text="Genre" GridPane.rowIndex="6" />
-                              <Label text="Style" GridPane.rowIndex="7" />
-                              <Label text="Released" GridPane.rowIndex="8" />
-                              <Label text="Country" GridPane.rowIndex="9" />
-                              <Label text="Info" GridPane.rowIndex="10" />
-                              <TextField text="This for B" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField text="Vinyl" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField text="Lac002" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <TextField prefHeight="26.0" prefWidth="128.0" text="Electronic" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                              <TextField text="Minimal" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                              <TextField text="2018" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                              <TextField text="Ukraine" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="10" />
-                           </children>
-                           <padding>
-                              <Insets left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </GridPane>
-                     </content>
-                  </ScrollPane>
-               </center>
-               <top>
-                  <BorderPane prefHeight="22.0" prefWidth="203.0" BorderPane.alignment="CENTER">
-                     <center>
-                        <Label text="Track info" BorderPane.alignment="CENTER">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                     </center>
-                     <right>
-                        <Button mnemonicParsing="false" text="Edit" BorderPane.alignment="CENTER">
-                           <BorderPane.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </BorderPane.margin>
-                        </Button>
-                     </right>
-                  </BorderPane>
-               </top>
-               <bottom>
-                  <HBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Save">
-                           <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" text="Delete">
-                           <HBox.margin>
-                              <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
-               </bottom>
-            </BorderPane>
-            <BorderPane maxWidth="300.0" prefWidth="300.0">
-               <center>
-                  <ListChooser prefWidth="286.0" rivit="Alex Pervukhin - This for B&#10;Kozac - Hoodlove&#10;Silat Beksi - On my own&#10;Pîrvu - Do this&#10;Pîrvu - Keep me busy&#10;&#10;" BorderPane.alignment="CENTER" />
-               </center>
-               <top>
-                  <VBox BorderPane.alignment="CENTER">
-                     <children>
-                        <Label alignment="CENTER" maxWidth="300.0" scaleShape="false" text="Sets">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                        <ComboBoxChooser prefWidth="250.0" rivit="Minimal setti&#10;Techno &#10;VinylOnly">
-                           <VBox.margin>
-                              <Insets bottom="5.0" left="20.0" right="20.0" />
-                           </VBox.margin>
-                        </ComboBoxChooser>
-                     </children>
-                  </VBox>
-               </top>
-            </BorderPane>
-         </items>
-      </SplitPane>
-   </center>
-   <bottom>
       <BorderPane BorderPane.alignment="CENTER">
-         <right>
-            <HBox alignment="CENTER_RIGHT" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <center>
+            <ScrollPane fitToWidth="true" BorderPane.alignment="CENTER">
+               <content>
+                  <GridPane hgap="10.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="RIGHT" hgrow="NEVER" prefWidth="70.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Artist" />
+                        <TextField text="Alex Pervukhin" GridPane.columnIndex="1" />
+                        <Label text="Name" GridPane.rowIndex="1" />
+                        <Label text="Format" GridPane.rowIndex="2" />
+                        <Label text="Label" GridPane.rowIndex="3" />
+                        <Label text="Label" GridPane.rowIndex="3" />
+                        <Label text="Bpm" GridPane.rowIndex="4" />
+                        <Label text="Length" GridPane.rowIndex="5" />
+                        <Label text="Genre" GridPane.rowIndex="6" />
+                        <Label text="Style" GridPane.rowIndex="7" />
+                        <Label text="Released" GridPane.rowIndex="8" />
+                        <Label text="Country" GridPane.rowIndex="9" />
+                        <Label text="Info" GridPane.rowIndex="10" />
+                        <TextField text="This for B" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField text="Vinyl" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField text="Lac002" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField prefHeight="26.0" prefWidth="128.0" text="Electronic" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField text="Minimal" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <TextField text="2018" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <TextField text="Ukraine" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                        <TextArea prefHeight="200.0" prefWidth="200.0" text="Tähän&#10;infoa&#10;kappaleesta&#10;###" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                     </children>
+                     <padding>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </GridPane>
+               </content>
+            </ScrollPane>
+         </center>
+         <top>
+            <BorderPane prefHeight="22.0" prefWidth="203.0" BorderPane.alignment="CENTER">
+               <center>
+                  <Label text="Track info" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </center>
+               <right>
+                  <Button fx:id="buttonSulje" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" BorderPane.alignment="CENTER">
+                     <BorderPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </BorderPane.margin>
+                  </Button>
+               </right>
+            </BorderPane>
+         </top>
+         <bottom>
+            <HBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" text="Add track">
+                  <Button alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleSave" text="Save">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="5.0" left="160.0" right="5.0" top="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button layoutX="669.0" layoutY="18.0" mnemonicParsing="false" text="Delete track" />
-               </children>
-               <BorderPane.margin>
-                  <Insets />
-               </BorderPane.margin>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </HBox>
-         </right>
-         <left>
-            <HBox spacing="10.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button mnemonicParsing="false" text="New track">
+                  <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleDelete" text="Delete">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
-         </left>
+         </bottom>
       </BorderPane>
-   </bottom>
+   </top>
 </BorderPane>
