--- a/Music/src/music/MusicGUIView.fxml
+++ b/Music/src/music/MusicGUIView.fxml
@@ -25,18 +25,18 @@
         <menus>
           <Menu mnemonicParsing="false" text="Menu">
                <items>
-              <MenuItem mnemonicParsing="false" text="Print" onAction="#handlePrint" />
-                  <MenuItem mnemonicParsing="false" text="Exit" />
+              <MenuItem mnemonicParsing="false" onAction="#handlePrint" text="Print" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
                </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-                  <MenuItem mnemonicParsing="false" text="New set" />
-                  <MenuItem mnemonicParsing="false" text="Rename set" />
-                  <MenuItem mnemonicParsing="false" text="Delete set" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleNewSet" text="New set" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleRenameSet" text="Rename set" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleDeleteSet" text="Delete set" />
             </items>
           </Menu>
-            <Menu mnemonicParsing="false" text="Help">
+            <Menu mnemonicParsing="false" onAction="#handleHelp" text="Help">
                <items>
                   <MenuItem mnemonicParsing="false" text="Help" />
                </items>
@@ -59,7 +59,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <ComboBoxChooser minWidth="160.0" rivit="Track&#10;Artist&#10;Format&#10;Bpm&#10;Style">
+                        <ComboBoxChooser fx:id="comboTracks" minWidth="160.0" rivit="Track&#10;Artist&#10;Format&#10;Bpm&#10;Style">
                            <VBox.margin>
                               <Insets bottom="5.0" />
                            </VBox.margin>
@@ -154,7 +154,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <ComboBoxChooser prefWidth="250.0" rivit="Select&#10;Minimal setti&#10;Techno &#10;VinylOnly">
+                        <ComboBoxChooser fx:id="comboSets" prefWidth="250.0" rivit="Select&#10;Minimal setti&#10;Techno &#10;VinylOnly">
                            <VBox.margin>
                               <Insets bottom="5.0" left="20.0" right="20.0" />
                            </VBox.margin>
