--- a/Music/src/music/NewUserView.fxml
+++ b/Music/src/music/NewUserView.fxml
@@ -8,17 +8,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="music.NewUserController">
    <bottom>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Add">
+            <Button mnemonicParsing="false" onAction="#handleAddUser" text="Add">
                <HBox.margin>
                   <Insets bottom="20.0" left="150.0" right="5.0" top="20.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Cancel">
+            <Button fx:id="buttonSulje4" mnemonicParsing="false" onAction="#handleCancel4" text="Cancel">
                <HBox.margin>
                   <Insets bottom="20.0" left="5.0" right="20.0" top="20.0" />
                </HBox.margin>
