--- a/Music/src/music/RenameSetView.fxml
+++ b/Music/src/music/RenameSetView.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="music.RenameSetController">
    <top>
       <Label text="Rename this set" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets bottom="20.0" top="20.0" />
+            <Insets bottom="20.0" top="30.0" />
          </BorderPane.margin>
          <font>
             <Font name="System Bold" size="12.0" />
@@ -23,14 +22,14 @@
    <bottom>
       <HBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Save">
+            <Button mnemonicParsing="false" onAction="#handleSave3" text="Save">
                <HBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="10.0" top="10.0" />
+                  <Insets bottom="20.0" left="70.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Back">
+            <Button fx:id="buttonSulje3" mnemonicParsing="false" onAction="#handleCancel3" text="Cancel">
                <HBox.margin>
-                  <Insets bottom="20.0" left="10.0" right="20.0" top="10.0" />
+                  <Insets bottom="20.0" left="5.0" right="10.0" top="10.0" />
                </HBox.margin>
             </Button>
          </children>
@@ -39,7 +38,7 @@
    <center>
       <TextField BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
+            <Insets bottom="10.0" left="20.0" right="20.0" />
          </BorderPane.margin>
       </TextField>
    </center>
