--- a/Music/src/music/RenameSetView.fxml
+++ b/Music/src/music/RenameSetView.fxml
@@ -22,12 +22,12 @@
    <bottom>
       <HBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleSave3" text="Save">
+            <Button mnemonicParsing="false" onAction="#handleSave" text="Save">
                <HBox.margin>
                   <Insets bottom="20.0" left="70.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="buttonSulje3" mnemonicParsing="false" onAction="#handleCancel3" text="Cancel">
+            <Button fx:id="buttonSulje" mnemonicParsing="false" onAction="#handleCancel" text="Cancel">
                <HBox.margin>
                   <Insets bottom="20.0" left="5.0" right="10.0" top="10.0" />
                </HBox.margin>
