--- a/Music/src/music/NewUserView.fxml
+++ b/Music/src/music/NewUserView.fxml
@@ -17,7 +17,7 @@
                   <Insets bottom="20.0" left="150.0" right="5.0" top="20.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="buttonSulje4" mnemonicParsing="false" onAction="#handleCancel4" text="Cancel">
+            <Button fx:id="buttonSulje" mnemonicParsing="false" onAction="#handleCancel" text="Cancel">
                <HBox.margin>
                   <Insets bottom="20.0" left="5.0" right="20.0" top="20.0" />
                </HBox.margin>
