--- a/Music/src/music/EditTrackView.fxml
+++ b/Music/src/music/EditTrackView.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -19,7 +18,7 @@
          <center>
             <ScrollPane fitToWidth="true" BorderPane.alignment="CENTER">
                <content>
-                  <GridPane hgap="10.0">
+                  <GridPane fx:id="gridKappale" hgap="10.0">
                     <columnConstraints>
                       <ColumnConstraints halignment="RIGHT" hgrow="NEVER" prefWidth="70.0" />
                       <ColumnConstraints hgrow="SOMETIMES" />
@@ -60,7 +59,7 @@
                         <TextField fx:id="editStyle" text="Minimal" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                         <TextField fx:id="editReleased" text="2018" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                         <TextField fx:id="editCountry" text="Ukraine" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                        <TextArea fx:id="editInfo" prefHeight="200.0" prefWidth="200.0" text="Tähän&#10;infoa&#10;kappaleesta&#10;###" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+                        <TextField fx:id="editInfo" GridPane.columnIndex="1" GridPane.rowIndex="10" />
                      </children>
                      <padding>
                         <Insets left="10.0" right="10.0" top="10.0" />
