--- a/Music/src/music/RenameSetView.fxml
+++ b/Music/src/music/RenameSetView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="music.RenameSetController">
+<BorderPane minWidth="200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="music.RenameSetController">
    <top>
       <Label text="Rename this set" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -24,7 +24,7 @@
          <children>
             <Button mnemonicParsing="false" onAction="#handleSave" text="Save">
                <HBox.margin>
-                  <Insets bottom="20.0" left="70.0" top="10.0" />
+                  <Insets bottom="20.0" left="80.0" top="10.0" />
                </HBox.margin>
             </Button>
             <Button fx:id="buttonSulje" mnemonicParsing="false" onAction="#handleCancel" text="Cancel">
@@ -36,7 +36,7 @@
       </HBox>
    </bottom>
    <center>
-      <TextField BorderPane.alignment="CENTER">
+      <TextField fx:id="tekstiUusiNimi" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" />
          </BorderPane.margin>
